<resources>
    <string name="app_name">SmartSitter</string>
    <string name="button">Button</string>
    <string name="this_is_second_page">This is second page!!!!!!!!!!!</string>
    <string name="send">Send</string>
    <string name="enter_any_text">Enter any text</string>
    <string name="reservation">Start</string>
    <string name="user_name">User name</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="number_of_students">Number of students</string>
    <string name="time_format_h_m">Time (HH:MM)</string>
    <string name="date_format_d_m_y">Date (DD/MM/YY)</string>
    <string name="next">next</string>
    <string name="for_how_long_should_dby_in_minutes">For how long? (minutes)</string>
    <string name="login">Register a new user</string>
    <string name="email_of_university">Email of university</string>
    <string name="password">Password</string>
    <string name="repeat_password">Repeat password</string>
    <string name="title_reservation_first_step">Choose your reservation date and time</string>
    <string name="sign_in">Sign in</string>
    <string name="registration_to_the_app">Register</string>
    <string name="building_room">Building: 604, room: 202</string>
    <string name="todo">TODO</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_10">10</string>
    <string name="_11">11</string>
    <string name="_12">12</string>
    <string name="_13">13</string>
    <string name="_14">14</string>
    <string name="_15">15</string>
    <string name="_16">16</string>
    <string name="_17">17</string>
    <string name="_18">18</string>
    <string name="_19">19</string>
    <string name="_20">20</string>
    <string name="_21">21</string>
    <string name="_22">22</string>
    <string name="_23">23</string>
    <string name="_24">24</string>
    <string name="_25">25</string>
    <string name="_26">26</string>
    <string name="_27">27</string>
    <string name="_28">28</string>
    <string name="_29">29</string>
    <string name="_30">30</string>
    <string name="_31">31</string>
    <string name="_32">32</string>
    <string name="_33">33</string>
    <string name="_34">34</string>
    <string name="_35">35</string>
    <string name="_36">36</string>
    <string name="_37">37</string>
    <string name="_38">38</string>
    <string name="_39">39</string>
    <string name="home_page">Done</string>
    <string name="registration_message">First time in this app? Register here...</string>

    <string-array name="spinner_duration">
        <item>30</item>
        <item>60</item>
        <item>90</item>
        <item>120</item>
    </string-array>

</resources>
