<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".LoginPage" tools:layout_editor_absoluteY="81dp">


    <TextView
            android:id="@+id/title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold"
            android:text="@string/login"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintVertical_bias="0.061"/>

    <EditText
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:hint="@string/email_of_university"
            android:textColorHint="#80000000"
            android:inputType="textEmailAddress"
            android:id="@+id/email"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="154dp" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.497" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="24dp" app:layout_constraintBottom_toTopOf="@+id/password"
            app:layout_constraintVertical_bias="0.814"/>
    <EditText
            android:id="@+id/user_name"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:hint="@string/user_name"
            android:textColor="@color/black"
            android:textColorHint="#80000000"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="86dp" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.497" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="23dp" app:layout_constraintBottom_toTopOf="@+id/email"
            app:layout_constraintVertical_bias="0.704"/>
    <EditText
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:inputType="textVisiblePassword"
            android:hint="@string/password"
            android:textColorHint="#80000000"
            android:id="@+id/password"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="223dp" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.502" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="24dp" app:layout_constraintBottom_toTopOf="@+id/repeat_password"
            app:layout_constraintVertical_bias="0.83"/>
    <EditText
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/repeat_password"
            android:textColorHint="#80000000"
            android:id="@+id/repeat_password" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="292dp" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="26dp" app:layout_constraintBottom_toTopOf="@+id/send_login"/>

    <Button
            android:id="@+id/send_login"
            android:layout_width="80dp"
            android:layout_height="40dp"
            android:background="@drawable/send_custom_button"
            android:textAlignment="center"
            android:text="@string/send"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="429dp" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.498" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="126dp"
            app:layout_constraintVertical_bias="0.14"/>
    <TextView
            android:id="@+id/login_message"
            android:layout_width="387dp"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="48dp" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/send_login" app:layout_constraintVertical_bias="0.25"
            app:layout_constraintHorizontal_bias="0.5"/>
    <Button
            android:id="@+id/next_button"
            android:layout_width="80dp"
            android:layout_height="40dp"
            android:background="@drawable/next_custom_button"
            android:textAlignment="center"
            android:text="@string/next"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="307dp" android:layout_marginStart="307dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="16dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="29dp"
            android:layout_marginRight="29dp" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="544dp"/>


</androidx.constraintlayout.widget.ConstraintLayout>