<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".SignIn" tools:layout_editor_absoluteY="81dp">


    <TextView
            android:id="@+id/title"
            android:layout_width="387dp"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold"
            android:text="@string/sign_in"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="71dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="628dp"/>

    <EditText
            android:id="@+id/user_name"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:hint="@string/user_name"
            android:textColor="@color/black"
            android:textColorHint="#80000000"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="105dp" android:layout_marginStart="105dp" android:layout_marginEnd="106dp"
            android:layout_marginRight="106dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title" android:layout_marginTop="72dp"
            app:layout_constraintHorizontal_bias="0.0" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="511dp"/>

    <EditText
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:inputType="textVisiblePassword"
            android:hint="@string/password"
            android:textColorHint="#80000000"
            android:id="@+id/password"
            android:layout_marginStart="105dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="105dp"
            android:layout_marginEnd="106dp" android:layout_marginRight="106dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toBottomOf="@+id/user_name"
            android:layout_marginTop="44dp" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="421dp"/>
    <Button
            android:id="@+id/send_sign_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/send"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="161dp" android:layout_marginStart="161dp" android:layout_marginEnd="162dp"
            android:layout_marginRight="162dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintTop_toBottomOf="@+id/password"
            android:layout_marginTop="44dp"/>

    <TextView
            android:id="@+id/sign_in_message"
            android:layout_width="387dp"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="44dp" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/send_sign_in" app:layout_constraintVertical_bias="0.204"
    />
    <Button
            android:id="@+id/login_button"
            android:layout_width="262dp"
            android:layout_height="53dp"
            android:text="@string/registration_to_the_app"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="160dp" android:layout_marginTop="41dp"
            app:layout_constraintTop_toBottomOf="@+id/sign_in_message"/>
    <Button
            android:id="@+id/next_button"
            android:layout_width="75dp"
            android:layout_height="42dp"
            android:text="@string/next"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="305dp" android:layout_marginStart="305dp" android:layout_marginEnd="30dp"
            android:layout_marginRight="30dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="611dp"
            android:layout_marginBottom="78dp" app:layout_constraintBottom_toBottomOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>