<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ReservationFirstStepActivity">


    <TextView
            android:id="@+id/page_name11"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            android:text="@string/this_is_second_page"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintVertical_bias="0.061"/>

    <EditText
            android:id="@+id/user_name"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:hint="@string/user_name"
            android:textColor="@color/black"
            android:textColorHint="#80000000"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="152dp"
            android:layout_marginBottom="40dp" app:layout_constraintBottom_toTopOf="@+id/date_reservation"/>

    <EditText
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/date_format_d_m_y"
            android:textColorHint="#80000000"
            android:id="@+id/date_reservation"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.502" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="45dp" app:layout_constraintBottom_toTopOf="@+id/time_reservation"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="212dp"
            app:layout_constraintVertical_bias="0.0"/>

    <!-- <TextView
             android:id="@+id/student_number_text"
             android:layout_width="112dp"
             android:layout_height="37dp"
             android:textAlignment="center"
             android:textColor="#80000000"
             android:textSize="16sp"
             android:textStyle="bold"
             android:text="@string/number_of_students"
             app:layout_constraintEnd_toStartOf="@+id/student_number"
             app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="119dp"
             android:layout_marginStart="119dp" app:layout_constraintHorizontal_bias="1.0"
             app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="372dp"
             app:layout_constraintBottom_toTopOf="@+id/send_reservation" app:layout_constraintVertical_bias="0.0"/>
     <Spinner
             android:id="@+id/student_number"
             android:layout_width="80dp"
             android:layout_height="wrap_content"
             android:background="@android:drawable/btn_dropdown"
             android:spinnerMode="dropdown"
             app:layout_constraintTop_toTopOf="parent"
             android:layout_marginTop="372dp" app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintHorizontal_bias="0.682" app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginBottom="29dp" app:layout_constraintBottom_toTopOf="@+id/send_reservation"
             app:layout_constraintVertical_bias="0.0"/>-->
    <EditText
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:inputType="time"
            android:ems="10"
            android:hint="@string/time_format_h_m"
            android:textColorHint="#80000000"
            android:id="@+id/time_reservation"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.502" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="288dp"
            android:layout_marginBottom="39dp" app:layout_constraintBottom_toTopOf="@+id/send_reservation"
            app:layout_constraintVertical_bias="0.0"/>
    <EditText
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:hint="@string/number_of_students"
            android:textColorHint="#80000000"
            android:id="@+id/students_number"
            app:layout_constraintBottom_toTopOf="@+id/send_reservation"
            android:layout_marginBottom="36dp" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="369dp" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toEndOf="parent"/>
    <Button
            android:id="@+id/send_reservation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/send"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.498" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="450dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="105dp"
            app:layout_constraintVertical_bias="0.0"/>

    <TextView
            android:id="@+id/reservation_later_message"
            android:layout_width="387dp"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="48dp" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/send_reservation" app:layout_constraintVertical_bias="0.25"
            app:layout_constraintHorizontal_bias="0.5"/>
    <Button
            android:id="@+id/next_button"
            android:layout_width="75dp"
            android:layout_height="42dp"
            android:text="@string/next"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="545dp" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="16dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="307dp" android:layout_marginStart="307dp" android:layout_marginEnd="29dp"
            android:layout_marginRight="29dp" app:layout_constraintEnd_toEndOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>